Adding python3.9-distutils
Need to add distutils explicitly for python3.9
Ubuntu 18.04LTS do not have it.

Issue-ID: CIMAN-33

Signed-off-by: Bengt Thuree <bthuree@linuxfoundation.org>
Change-Id: Ib53e64a5a8d035fe55313fa9b66fc554c4b6cd2e

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -121,8 +121,28 @@
           - python3.9
           - python3.9-dev
           - python3.9-tk
+          - python3.9-distutils
       become: true
       when: ansible_distribution == 'Ubuntu'
+
+    - name: Gather package facts
+      package_facts:
+        manager: auto
+      when: ansible_distribution == 'Ubuntu'
+
+    - name: Debug if package is present
+      debug:
+        msg: 'BENGT yes, python3.9-distutils is present'
+      when:
+        - ansible_distribution == 'Ubuntu' 
+        - 'python3.9-distutils' in ansible_facts.packages
+
+    - name: Debug if package is absent
+      debug:
+        msg: 'BENGT no, python3.9-distutils is absent'
+      when:
+        - ansible_distribution == 'Ubuntu' 
+        - 'python3.9-distutils' not in ansible_facts.packages
 
     - name: Install nodejs-dev libssl1.0-dev dep
       apt:
