--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -121,8 +121,24 @@
           - python3.9
           - python3.9-dev
           - python3.9-tk
+          - python3.9-distutils
       become: true
       when: ansible_distribution == 'Ubuntu'
+
+    - name: Gather package facts
+      package_facts:
+        manager: auto
+      when: ansible_distribution == 'Ubuntu'
+
+    - name: Debug if package is present
+      debug:
+        msg: 'BENGT yes, python3.9-distutils is present'
+      when: 'python3.9-distutils' in ansible_facts.packages and ansible_distribution == 'Ubuntu'
+
+    - name: Debug if package is absent
+      debug:
+        msg: 'BENGT no, python3.9-distutils is absent'
+      when: 'python3.9-distutils' not in ansible_facts.packages and ansible_distribution == 'Ubuntu'
 
     - name: Install nodejs-dev libssl1.0-dev dep
       apt:
