--- a/jjb/integration/simulators/nf-simulator/integration-ves-client-nf-simulator.yaml
+++ b/jjb/integration/simulators/nf-simulator/integration-ves-client-nf-simulator.yaml
@@ -14,7 +14,7 @@
                 build-node: ubuntu1804-docker-8c-8g
                 container-public-registry: 'nexus3.onap.org:10001'
                 container-staging-registry: 'nexus3.onap.org:10003'
-                mvn-goals: 'clean install -P docker -DskipDockerPush=false'
+                mvn-goals: 'clean deploy -P docker -DskipDockerPush=false'
           - '{project-name}-gerrit-release-jobs':
                 build-node: centos7-docker-8c-8g
 
