--- a/jjb/testsuite/testsuite-cds-mock-odl.yaml
+++ b/jjb/testsuite/testsuite-cds-mock-odl.yaml
@@ -12,3 +12,59 @@
     build-node: centos7-builder-2c-1g
     jobs:
       - gerrit-info-yaml-verify
+
+- project:
+    name: testsuite-cds-mock-odl-linters
+    project: 'testsuite/cds-mock-odl'
+    project-name: 'testsuite-cds-mock-odl'
+    python-version: python3
+    jobs:
+      - integration-linters
+    subproject:
+      - 'yaml':
+          tox-dir: '.'
+          tox-envs: 'yaml'
+          pattern: '**/*.yaml'
+      - 'yml':
+          tox-dir: '.'
+          tox-envs: 'yaml'
+          pattern: '**/*.yml'
+      - 'json':
+          tox-dir: '.'
+          tox-envs: 'json'
+          pattern: '**/*.json'
+      - 'python':
+          tox-dir: '.'
+          tox-envs: 'py'
+          pattern: '**/*.py'
+      - 'md':
+          tox-dir: '.'
+          tox-envs: 'md'
+          pattern: '**/*.md'
+    stream:
+      - 'master':
+          branch: 'master'
+
+- project:
+    name: 'testsuite-cds-mock-odl-docker'
+    jobs:
+      - gerrit-docker-verify:
+          project-name: 'testsuite-cds-mock-odl'
+          docker-root: .
+          docker-name: 'onap/cds-mock-odl'
+          docker-build-args: '-f ./docker/Dockerfile'
+      - gerrit-docker-merge:
+          project-name: 'testsuite-cds-mock-odl'
+          docker-root: .
+          docker-name: 'onap/cds-mock-odl'
+          docker-build-args: '-f ./docker/Dockerfile'
+    project: 'testsuite/cds-modk-odl'
+    stream:
+      - 'master':
+            branch: 'master'
+            files: ''
+    docker-root: '$WORKSPACE'
+    mvn-settings: 'integration-settings'
+    build-node: ubuntu1804-docker-8c-8g
+    cron: '@daily'
+    container-tag-method: stream
