Change dir of tox and subproject
Issue-ID: INT-1869
Signed-off-by: Edyta Krukowska <edyta.krukowska@nokia.com>
Change-Id: I03109e1d660df1a09edeeaf291fee0f12c1b0d79

--- a/jjb/integration/simulators/nf-simulator/integration-simulators-nf-simulator-simulator-cli.yaml
+++ b/jjb/integration/simulators/nf-simulator/integration-simulators-nf-simulator-simulator-cli.yaml
@@ -3,11 +3,11 @@
       name: integration-simulators-nf-simulator-simulator-cli
       project-name: 'integration-simulators-nf-simulator'
       python-version: python3
-      tox-dir: './simulator-cli'
+      tox-dir: '.'
       tox-envs: ''
       subproject:
           - simulator-cli:
-                path: '.'
+                path: './simulator-cli'
                 pattern: '**'
       project: 'integration/simulators/nf-simulator'
       stream:
