Add jobs for sdc-helm-validator
Issue-ID: SDC-3185
Signed-off-by: Remigiusz Janeczek <remigiusz.janeczek@nokia.com>
Change-Id: I9349042233864cf5543945889030dc7965eeb9d8

--- a/jjb/sdc/sdc-sdc-helm-validator.yaml
+++ b/jjb/sdc/sdc-sdc-helm-validator.yaml
@@ -12,3 +12,64 @@
     build-node: centos7-builder-2c-1g
     jobs:
       - gerrit-info-yaml-verify
+
+- project:
+    name: sdc-sdc-helm-validator
+    project-name: 'sdc-sdc-helm-validator'
+    java-version: openjdk11
+    jobs:
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-stage:
+          sign-artifacts: true
+          build-node: centos7-docker-8c-8g
+          maven-versions-plugin: true
+          mvn-goals: 'clean deploy'
+      - gerrit-maven-docker-stage:
+          build-node: ubuntu1804-docker-8c-8g
+          maven-versions-plugin: true
+          mvn-goals: 'clean install -P docker'
+          container-public-registry: 'nexus3.onap.org:10001'
+          container-staging-registry: 'nexus3.onap.org:10003'
+      - '{project-name}-gerrit-release-jobs':
+          build-node: centos7-docker-8c-8g
+    project: 'sdc/sdc-helm-validator'
+    mvn-settings: 'sdc-sdc-helm-validator-settings'
+    stream:
+      - 'master':
+            branch: 'master'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1804-docker-8c-8g
+
+
+- project:
+    name: sdc-sdc-helm-validator-sonar
+    java-version: openjdk11
+    jobs:
+      - gerrit-maven-sonar
+    sonarcloud: true
+    sonarcloud-project-organization: '{sonarcloud_project_organization}'
+    sonarcloud-api-token: '{sonarcloud_api_token}'
+    sonarcloud-project-key: '{sonarcloud_project_organization}_{project-name}'
+    sonar-mvn-goal: '{sonar_mvn_goal}'
+    cron: '@daily'
+    build-node: ubuntu1804-docker-8c-8g
+    project: 'sdc/sdc-helm-validator'
+    project-name: 'sdc-sdc-helm-validator'
+    branch: 'master'
+    mvn-settings: 'sdc-sdc-helm-validator-settings'
+    mvn-params: '-Dsonar.branch={branch}'
+    mvn-goals: 'clean install'
+    mvn-opts: '-Xmx1024m'
+
+- project:
+    name: sdc-sdc-helm-validator-clm
+    java-version: openjdk11
+    jobs:
+      - gerrit-maven-clm
+    nexus-iq-namespace: 'onap-'
+    project: 'sdc/sdc-helm-validator'
+    project-name: 'sdc-sdc-helm-validator'
+    branch: 'master'
+    mvn-settings: 'sdc-sdc-helm-validator-settings'
