Push images in sdc-sdc-helm-validator-maven-docker-stage
Issue-ID: SDC-3185
Signed-off-by: Piotr Marcinkiewicz <piotr.marcinkiewicz@nokia.com>
Change-Id: I6e223656e781b1dd8d4d758a227ed1c741555c69

--- a/jjb/sdc/sdc-sdc-helm-validator.yaml
+++ b/jjb/sdc/sdc-sdc-helm-validator.yaml
@@ -28,7 +28,7 @@
       - gerrit-maven-docker-stage:
           build-node: ubuntu1804-docker-8c-8g
           maven-versions-plugin: true
-          mvn-goals: 'clean install -P docker'
+          mvn-goals: 'clean install docker:build docker:push'
           container-public-registry: 'nexus3.onap.org:10001'
           container-staging-registry: 'nexus3.onap.org:10003'
       - '{project-name}-gerrit-release-jobs':
