--- a/jjb/cps/cps-csit.yaml
+++ b/jjb/cps/cps-csit.yaml
@@ -15,6 +15,8 @@
       stream:
           - 'master':
                 branch: 'master'
+          - 'honolulu':
+                branch: 'honolulu'
       mvn-settings: 'cps-settings'
       robot-options: ''
       branch: 'master'
