--- a/jjb/integration/usecases/integration-usecases-A1-policy-enforcement-r-apps.yaml
+++ b/jjb/integration/usecases/integration-usecases-A1-policy-enforcement-r-apps.yaml
@@ -6,3 +6,35 @@
     build-node: centos7-builder-2c-1g
     jobs:
       - gerrit-info-yaml-verify
+
+- project:
+    name: integration-usecases-A1-policy-enforcement-r-apps-linters
+    project: integration/usecases/A1-policy-enforcement-r-apps
+    project-name: integration-usecases-A1-policy-enforcement-r-apps
+    python-version: python3
+    jobs:
+      - integration-linters
+    subproject:
+      - 'yaml':
+          tox-dir: '.'
+          tox-envs: 'yaml'
+          pattern: '**/*.yaml'
+      - 'yml':
+          tox-dir: '.'
+          tox-envs: 'yaml'
+          pattern: '**/*.yml'
+      - 'json':
+          tox-dir: '.'
+          tox-envs: 'json'
+          pattern: '**/*.json'
+      - 'python':
+          tox-dir: '.'
+          tox-envs: 'py'
+          pattern: '**/*.py'
+      - 'md':
+          tox-dir: '.'
+          tox-envs: 'md'
+          pattern: '**/*.md'
+    stream:
+      - 'master':
+          branch: 'master'
