--- a/jjb/integration/simulators/integration-A1-policy-enforcement-simulator.yaml
+++ b/jjb/integration/simulators/integration-A1-policy-enforcement-simulator.yaml
@@ -7,3 +7,35 @@
     build-node: centos7-builder-2c-1g
     jobs:
       - gerrit-info-yaml-verify
+
+- project:
+    name: integration-simulators-A1-policy-enforcement-simulator-linters
+    project: integration/simulators/A1-policy-enforcement-simulator
+    project-name: integration-simulators-A1-policy-enforcement-simulator
+    python-version: python3
+    jobs:
+      - integration-linters
+    subproject:
+      - 'yaml':
+          tox-dir: '.'
+          tox-envs: 'yaml'
+          pattern: '**/*.yaml'
+      - 'yml':
+          tox-dir: '.'
+          tox-envs: 'yaml'
+          pattern: '**/*.yml'
+      - 'json':
+          tox-dir: '.'
+          tox-envs: 'json'
+          pattern: '**/*.json'
+      - 'python':
+          tox-dir: '.'
+          tox-envs: 'py'
+          pattern: '**/*.py'
+      - 'md':
+          tox-dir: '.'
+          tox-envs: 'md'
+          pattern: '**/*.md'
+    stream:
+      - 'master':
+          branch: 'master'
