[SDC] Update Streams
Add Honolulu streams and remove old unused streams

Issue-ID: SDC-3526
Signed-off-by: ChrisC <christophe.closset@intl.att.com>
Change-Id: Ied6dbb0698edf38a579cc2d430232dfcd8d65d9e

--- a/jjb/sdc/sdc-onap-ui-common.yaml
+++ b/jjb/sdc/sdc-onap-ui-common.yaml
@@ -18,10 +18,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'guilin':
-          branch: 'guilin'
-      - 'frankfurt':
-          branch: 'frankfurt'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: 'sdc-onap-ui-common-settings'
     files: '**'
     archive-artifacts: ''
