--- a/jjb/sdc/sdc-sdc-be-common.yaml
+++ b/jjb/sdc/sdc-sdc-be-common.yaml
@@ -21,10 +21,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'guilin':
-          branch: 'guilin'
-      - 'frankfurt':
-          branch: 'frankfurt'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: 'sdc-sdc-be-common-settings'
     files: '**'
     archive-artifacts: ''
