--- a/jjb/sdc/sdc-sdc-distribution-client.yaml
+++ b/jjb/sdc/sdc-sdc-distribution-client.yaml
@@ -23,12 +23,9 @@
       - 'master':
           branch: 'master'
           java-version: openjdk11
-      - 'guilin':
-          branch: 'guilin'
-          java-version: openjdk8
-      - 'frankfurt':
-          branch: 'frankfurt'
-          java-version: openjdk8
+      - 'honolulu':
+          branch: 'honolulu'
+          java-version: openjdk11
     mvn-settings: 'sdc-sdc-distribution-client-settings'
     files: '**'
     archive-artifacts: ''
