--- a/jjb/sdc/sdc-csit.yaml
+++ b/jjb/sdc/sdc-csit.yaml
@@ -21,6 +21,8 @@
       stream:
           - 'master':
                 branch: 'master'
+          - 'honolulu':
+                branch: 'honolulu'
       java-version: openjdk11
       mvn-version: 'mvn36'
       mvn-settings: 'sdc-settings'
