--- a/jjb/sdc/sdc-onap-ui-angular.yaml
+++ b/jjb/sdc/sdc-onap-ui-angular.yaml
@@ -24,10 +24,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'guilin':
-          branch: 'guilin'
-      - 'frankfurt':
-          branch: 'frankfurt'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: 'sdc-onap-ui-angular-settings'
     files: '**'
     archive-artifacts: ''
