[SDC] Update Streams
Add Honolulu streams and remove old unused streams

Issue-ID: SDC-3526
Signed-off-by: ChrisC <christophe.closset@intl.att.com>
Change-Id: Ied6dbb0698edf38a579cc2d430232dfcd8d65d9e

--- a/jjb/sdc/sdc-sdc-be-common.yaml
+++ b/jjb/sdc/sdc-sdc-be-common.yaml
@@ -22,9 +22,7 @@
       - 'master':
           branch: 'master'
       - 'guilin':
-          branch: 'guilin'
-      - 'frankfurt':
-          branch: 'frankfurt'
+          branch: 'honolulu'
     mvn-settings: 'sdc-sdc-be-common-settings'
     files: '**'
     archive-artifacts: ''
