Set python version 3.8 for netconf-server jobs.
Signed-off-by: Bartosz Gardziejewski <bartosz.gardziejewski@nokia.com>
Change-Id: Ib6828037f0ff0053fdba2e9f0fefd1f1d0ae1122
Issue-ID: INT-1869

--- a/jjb/integration/simulators/nf-simulator/integration-simulators-nf-simulator-netconf-server.yaml
+++ b/jjb/integration/simulators/nf-simulator/integration-simulators-nf-simulator-netconf-server.yaml
@@ -3,6 +3,7 @@
 - project:
       name: integration-simulators-nf-simulator-netconf-server
       project-name: 'integration-simulators-nf-simulator-netconf-server'
+      python-version: python3.8
       jobs:
           - '{project-name}-{stream}-verify-java'
           - '{project-name}-{stream}-merge-java'
