[XTESTING] fix bad project name in jjb
old bad copy /paste may prevent from releasing dockers

Issue-ID: INT-1884

Signed-off-by: morganrol <morgan.richomme@orange.com>
Change-Id: I669446c5e9006158193c9c59f19d610746cfe5f8

--- a/jjb/integration/xtesting/integration-xtesting.yaml
+++ b/jjb/integration/xtesting/integration-xtesting.yaml
@@ -47,7 +47,7 @@
 - project:
     name: integration-xtesting-release
     project-name: 'integration-xtesting'
-    project: 'integration/docker/onap-python'
+    project: 'integration/xtesting
     mvn-settings: 'integration-settings'
     jobs:
       - '{project-name}-gerrit-release-jobs':
