[DCAE] Increase timeout for policy-handler jobs
Change-Id: Id82f9504e5f2480b7f7400a14afa55255e8dbda3
Signed-off-by: vv770d <vv770d@att.com>
Issue-ID: DCAEGEN2-2653

--- a/jjb/dcaegen2/dcaegen2-platform-policy-handler.yaml
+++ b/jjb/dcaegen2/dcaegen2-platform-policy-handler.yaml
@@ -13,6 +13,7 @@
       - 'honolulu':
           branch: 'honolulu'
     build-node: ubuntu1804-docker-8c-8g
+    build-timeout: 45
     mvn-settings: 'dcaegen2-platform-policy-handler-settings'
     jobs:
       - '{project-name}-python-jobs'
