--- a/jjb/integration/simulators/integration-A1-policy-enforcement-simulator.yaml
+++ b/jjb/integration/simulators/integration-A1-policy-enforcement-simulator.yaml
@@ -9,6 +9,21 @@
       - gerrit-info-yaml-verify
 
 - project:
+    name: integration-simulators-A1-policy-enforcement-simulator
+    project: integration/simulators/A1-policy-enforcement-simulator
+    project-name: integration-simulators-A1-policy-enforcement-simulator
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'integration-simulators-A1-policy-enforcement-simulator-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1804-docker-8c-8g
+    jobs:
+        - '{project-name}-{stream}-verify-java':
+            mvn-goals: 'clean install'
+
+- project:
     name: integration-simulators-A1-policy-enforcement-simulator-linters
     project: integration/simulators/A1-policy-enforcement-simulator
     project-name: integration-simulators-A1-policy-enforcement-simulator
