Add script to update nodejs for Sonarcloud scans
Some projects have been seeing failures in Sonarcloud scans, as they
are no longer compatible with Node <v10. We were unable to find the
requirement that is pulling Node in, and it is not installed by
default on the CI agents.

By installing an up-to-date version before running any other tasks,
the issue is fixed and the Sonarcloud scans do not run into any
issues. All affected jobs have been updated.

Change-Id: I01a578b37300b6dd6e6fd235218978a19518de99
Issue-ID: CIMAN-33
Signed-off-by: Eric Ball <eball@linuxfoundation.org>

--- a/jjb/policy/policy-gui.yaml
+++ b/jjb/policy/policy-gui.yaml
@@ -36,7 +36,7 @@
 - project:
     name: policy-gui-sonar
     jobs:
-      - gerrit-maven-sonar
+      - gerrit-maven-sonar-prescan-script
     sonarcloud: true
     sonarcloud-project-organization: '{sonarcloud_project_organization}'
     sonarcloud-api-token: '{sonarcloud_api_token}'
@@ -51,6 +51,7 @@
     java-version: openjdk11
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    sonar-prescan-script: !include-raw-escape: ../ubuntu-latest-nodejs.sh
 
 - project:
     name: policy-gui-clm
