--- a/jjb/externalapi/externalapi-nbi.yaml
+++ b/jjb/externalapi/externalapi-nbi.yaml
@@ -67,7 +67,7 @@
 - project:
     name: externalapi-nbi-sonar
     jobs:
-      - gerrit-maven-sonar
+      - gerrit-maven-sonar-prescan-script
     sonarcloud: true
     sonarcloud-project-organization: '{sonarcloud_project_organization}'
     sonarcloud-api-token: '{sonarcloud_api_token}'
@@ -82,6 +82,7 @@
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
     java-version: openjdk11
+    sonar-prescan-script: !include-raw-escape: ../ubuntu-latest-nodejs.sh
 
 - project:
     name: externalapi-nbi-info
