Add review verification job for OOF
Issue-ID: OPTFRA-930
Signed-off-by: krishnaa96 <krishna.moorthy6@wipro.com>
Change-Id: Ibd8fc8fcc1a40130121722105ab2bf1d17de0420

--- a/jjb/optf/optf-has-csit.yaml
+++ b/jjb/optf/optf-has-csit.yaml
@@ -1,14 +1,18 @@
 - project:
     name: optf-has-csit
     jobs:
-      - '{project-name}-{stream}-verify-csit-{functionality}'
-      - '{project-name}-{stream}-csit-{functionality}'
+      - '{project-name}-review-verification-maven-{stream}':
+          mvn-goals: clean install
+          mvn-settings: 
+      - '{project-name}-merge-verification-maven-{stream}':
+          mvn-goals: clean install
     project-name: optf-has
     recipients: 'snarayanan@research.att.com'
+    project: optf/has
     stream:
       - 'master':
           branch: 'master'
-    functionality:
-      - 'has':
-          trigger_jobs:
+      - 'honolulu':
+          branch: 'honolulu'
+    mvn-settings: 'optf-has-settings'
     robot-options: ''
