--- a/jjb/optf/optf-osdf-csit.yaml
+++ b/jjb/optf/optf-osdf-csit.yaml
@@ -1,14 +1,15 @@
 - project:
     name: optf-osdf-csit
     jobs:
-      - '{project-name}-{stream}-verify-csit-{functionality}'
-      - '{project-name}-{stream}-csit-{functionality}'
+      - '{project-name}-{stream}-project-csit'
+      - '{project-name}-review-verification-maven-{stream}':
+          mvn-goals: clean install
+      - '{project-name}-merge-verification-maven-{stream}':
+          mvn-goals: clean install
     project-name: optf-osdf
     recipients: 'snarayanan@research.att.com'
+    project: optf/osdf
     stream:
       - 'master':
           branch: 'master'
-    functionality:
-      - 'osdf':
-          trigger_jobs:
     robot-options: ''
