--- a/jjb/dmaap/dmaap-messagerouter-messageservice.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-messageservice.yaml
@@ -15,17 +15,43 @@
           maven-versions-plugin: true
           container-public-registry: 'nexus3.onap.org:10001'
           container-staging-registry: 'nexus3.onap.org:10003'
+    project: 'dmaap/messagerouter/messageservice'
+    stream:
+      - 'honolulu':
+          branch: 'honolulu'
+      - 'guilin':
+          branch: 'guilin'
+    mvn-settings: 'dmaap-messagerouter-messageservice-settings'
+    files: '**'
+    archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: 'docker'
+    crom: ''
+
+- project:
+    name: dmaap-messagerouter-messageservice-java-11
+    project-name: 'dmaap-messagerouter-messageservice-java-11'
+    jobs:
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-stage:
+          sign-artifacts: true
+          build-node: centos7-builder-4c-4g
+          maven-versions-plugin: true
+      - gerrit-maven-docker-stage:
+          build-node: ubuntu1804-docker-8c-8g
+          mvn-params: '-P docker -Dmaven.test.skip=true'
+          maven-versions-plugin: true
+          container-public-registry: 'nexus3.onap.org:10001'
+          container-staging-registry: 'nexus3.onap.org:10003'
       - '{project-name}-gerrit-release-jobs':
           build-node: centos7-docker-8c-8g
     project: 'dmaap/messagerouter/messageservice'
     stream:
       - 'master':
           branch: 'master'
-      - 'honolulu':
-          branch: 'honolulu'
-      - 'guilin':
-          branch: 'guilin'
     mvn-settings: 'dmaap-messagerouter-messageservice-settings'
+    java-version: openjdk11
     files: '**'
     archive-artifacts: ''
     docker-pom: 'pom.xml'
