change cps jenkins mvn param for ncmp
This commit changes jenkins mvn parameters for
mvn profile from cps-xnf-docker to cps-ncmp-docker.

Signed-off-by: tragait <rahul.tyagi@est.tech>
Issue-ID: CPS-315
Signed-off-by: tragait <rahul.tyagi@est.tech>
Change-Id: Ie80f8eb2907d6eb2e9cf3b351ae3f6fca6d72b7e

--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -38,7 +38,7 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java':
           docker-pom: 'pom.xml'
-          mvn-params: "-P cps-xnf-docker"
+          mvn-params: "-P cps-ncmp-docker"
       - gerrit-maven-stage:
           sign-artifacts: true
           build-node: centos7-docker-8c-8g
@@ -46,7 +46,7 @@
       - gerrit-maven-docker-stage:
           build-node: centos7-docker-8c-8g
           maven-versions-plugin: true
-          mvn-params: '-P cps-xnf-docker'
+          mvn-params: '-P cps-ncmp-docker'
           container-public-registry: 'nexus3.onap.org:10001'
           container-staging-registry: 'nexus3.onap.org:10003'
       - '{project-name}-gerrit-release-jobs':
