[HONOLULU] create honolulu xtesting dockers
Needed for honolulu daily/weekly/..CI/CD chain

Issue-ID: INT-1901

Signed-off-by: morganrol <morgan.richomme@orange.com>
Change-Id: Iae5dac30c9a82c1444bf644c6a07cfe9468e239d

--- a/jjb/integration/xtesting/integration-xtesting.yaml
+++ b/jjb/integration/xtesting/integration-xtesting.yaml
@@ -43,6 +43,8 @@
                 branch: 'frankfurt'
           - 'guilin':
                 branch: 'guilin'
+          - 'honolulu':
+                branch: 'honolulu'
 
 - project:
     name: integration-xtesting-release
@@ -110,6 +112,9 @@
     stream:
       - 'master':
             branch: 'master'
+            files: ''
+      - 'honolulu':
+            branch: 'honolulu'
             files: ''
       - 'guilin':
             branch: 'guilin'
