DMAAP-JJB - Fix message Service jjb typo
Signed-off-by: david.mcweeney <david.mcweeney@est.tech>
Change-Id: Iea2dc9eefce5e1fa418ed310b458971c0cfec37c
Issue-ID: DMAAP-1563

--- a/jjb/dmaap/dmaap-messagerouter-messageservice.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-messageservice.yaml
@@ -26,7 +26,7 @@
     archive-artifacts: ''
     docker-pom: 'pom.xml'
     mvn-profile: 'docker'
-    crom: ''
+    cron: ''
 
 - project:
     name: dmaap-messagerouter-messageservice-java-11
