--- a/jjb/dmaap/dmaap-buscontroller.yaml
+++ b/jjb/dmaap/dmaap-buscontroller.yaml
@@ -22,6 +22,24 @@
     stream:
       - 'master':
           branch: 'master'
+    mvn-settings: 'dmaap-buscontroller-settings'
+    files: '**'
+    archive-artifacts: ''
+    java-version: openjdk11
+
+- project:
+    name: dmaap-buscontroller-maintenance-java11
+    project-name: 'dmaap-buscontroller-maintenance'
+    jobs:
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-docker-stage:
+          build-node: ubuntu1804-docker-8c-8g
+          mvn-goals: 'clean package -P docker docker:build docker:push'
+          container-public-registry: 'nexus3.onap.org:10001'
+          container-staging-registry: 'nexus3.onap.org:10003'
+    project: 'dmaap/buscontroller'
+    stream:
       - 'honolulu':
           branch: 'honolulu'
       - 'guilin':
@@ -30,9 +48,7 @@
     files: '**'
     archive-artifacts: ''
     java-version: openjdk11
-
-# removed sonar job from this template because this repo only builds a docker container
-# and the 0% coverage report from Sonar was causing repeated escalations.
+    cron: ''
 
 - project:
     name: dmaap-buscontroller-clm
