--- a/jjb/dmaap/dmaap-dbcapi.yaml
+++ b/jjb/dmaap/dmaap-dbcapi.yaml
@@ -17,18 +17,34 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'honolulu':
-          branch: 'honolulu'
-      - 'guilin':
-          branch: 'guilin'
-    # due to a strange macro / variable translation problem this needs to be
-    # passed as a string block to properly get the properties correctly defined
-    # in the job
     maven-deploy-properties: |
       deployAtEnd=true
     files: '**'
     archive-artifacts: ''
 
+- project:
+    name: dmaap-dbcapi-java11-maintenance
+    project-name: 'dmaap-dbcapi-maintenance'
+    jobs:
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-stage:
+          sign-artifacts: true
+          build-node: centos7-builder-4c-4g
+          maven-versions-plugin: true
+    project: 'dmaap/dbcapi'
+    mvn-settings: 'dmaap-dbcapi-settings'
+    java-version: openjdk11
+    stream:
+      - 'honolulu':
+          branch: 'honolulu'
+      - 'guilin':
+          branch: 'guilin'
+    maven-deploy-properties: |
+      deployAtEnd=true
+    files: '**'
+    archive-artifacts: ''
+    cron: ''
 
 - project:
     name: dmaap-dbcapi-sonar
