--- a/jjb/dmaap/dmaap-messagerouter-zookeeper.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-zookeeper.yaml
@@ -15,6 +15,25 @@
     stream:
       - 'master':
           branch: 'master'
+    mvn-settings: 'dmaap-zookeeper-settings'
+    files: '**'
+    archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: 'docker'
+    build-node: ubuntu1804-docker-8c-8g
+
+- project:
+    name: dmaap-zookeeper-maintenance
+    project-name: 'dmaap-zookeeper-maintenance'
+    jobs:
+      - gerrit-maven-docker-stage:
+          build-node: ubuntu1804-docker-8c-8g
+          mvn-params: '-P docker -Dmaven.test.skip=true'
+          maven-versions-plugin: true
+          container-public-registry: 'nexus3.onap.org:10001'
+          container-staging-registry: 'nexus3.onap.org:10003'
+    project: 'dmaap/zookeeper'
+    stream:
       - 'honolulu':
           branch: 'honolulu'
       - 'guilin':
@@ -25,6 +44,7 @@
     docker-pom: 'pom.xml'
     mvn-profile: 'docker'
     build-node: ubuntu1804-docker-8c-8g
+    cron: ''
 
 - project:
     name: dmaap-zookeeper-info
