[MULTICLOUD] Enable CI on Honolulu for K8splugin
Issue-ID: MULTICLOUD-1294
Signed-off-by: Konrad Bańka <k.banka@samsung.com>
Change-Id: I9fb203b2f0a760804ef2e3f6a144c6e1d70d4516

--- a/jjb/multicloud/multicloud-info.yaml
+++ b/jjb/multicloud/multicloud-info.yaml
@@ -27,3 +27,11 @@
     project: multicloud/oom
     branch: master
 
+- project:
+    name: multicloud-k8s-info
+    project-name: multicloud-k8s
+    jobs:
+      - gerrit-info-yaml-verify
+    build-node: centos7-builder-2c-1g
+    project: multicloud/k8s
+    branch: master
