Added Jobs for Guilin & Honolulu Branches
Change-Id: Iad78f9ddd8ec2093cc2f4b8c4bc60662a9d12daa
Issue-ID: HOLMES-435
Signed-off-by: GuangrongFu <fu.guangrong@zte.com.cn>

--- a/jjb/holmes/holmes-common.yaml
+++ b/jjb/holmes/holmes-common.yaml
@@ -23,6 +23,10 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'guilin':
+          branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: 'holmes-common-settings'
     files: '**'
     archive-artifacts: ''
