--- a/jjb/holmes/holmes-rule-mgt.yaml
+++ b/jjb/holmes/holmes-rule-mgt.yaml
@@ -21,6 +21,10 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'guilin':
+          branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: 'holmes-rule-management-settings'
     files: '**'
     archive-artifacts: ''
