--- a/jjb/dmaap/dmaap-datarouter.yaml
+++ b/jjb/dmaap/dmaap-datarouter.yaml
@@ -47,6 +47,22 @@
     cron: ''
 
 - project:
+    name: dmaap-datarouter-csit-ssl
+    jobs:
+      - '{project-name}-{stream}-csit-{functionality}'
+      - '{project-name}-{stream}-verify-csit-{functionality}'
+    project-name: 'dmaap-datarouter'
+    recipients: 'fiachra.corcoran@est.tech'
+    stream:
+      - 'master':
+          branch: 'master'
+    functionality:
+      - 'ssl-dr-suite':
+          trigger_jobs:
+            - '{project-name}-maven-docker-stage-{stream}'
+    robot-options: ''
+
+- project:
     name: dmaap-datarouter-sonar
     jobs:
       - gerrit-maven-sonar
