--- a/jjb/cps/cps-csit.yaml
+++ b/jjb/cps/cps-csit.yaml
@@ -2,12 +2,13 @@
 - project:
       name: cps-csit
       jobs:
+          # NB. cps-xnf-docker is a legacy profile name, used in honolulu branch only
           - '{project-name}-review-verification-maven-{stream}':
                 mvn-goals: clean install
-                mvn-params: '-Dmaven.test.skip=true -Dnexus.repository= -Pcps-xnf-docker'
+                mvn-params: '-Dmaven.test.skip=true -Dnexus.repository= -Pcps-ncmp-docker -Pcps-xnf-docker'
           - '{project-name}-merge-verification-maven-{stream}':
                 mvn-goals: clean install
-                mvn-params: '-Dmaven.test.skip=true -Dnexus.repository= -Pcps-xnf-docker'
+                mvn-params: '-Dmaven.test.skip=true -Dnexus.repository= -Pcps-ncmp-docker -Pcps-xnf-docker'
       project-name: 'cps'
       recipients: 'toine.siebelink@est.tech'
       # project name in gerrit
