Update latest release stream
 - update from elalto to honolulu

Issue-ID: OOM-2722
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: Ia694fa484349e10d59151a94b0876afc44595bac

--- a/jjb/oom/offline-installer.yaml
+++ b/jjb/oom/offline-installer.yaml
@@ -8,8 +8,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'elalto':
-          branch: 'elalto'
+      - 'honolulu':
+          branch: 'honolulu'
 
     jobs:
       - '{project-name}-{stream}-review':
