[DMAAP] Add jdk11 to sonar and clm jobs
Change-Id: I908241390172e6a928826e07eb1724b673592e31
Signed-off-by: efiacor <fiachra.corcoran@est.tech>
Issue-ID: DMAAP-1599

--- a/jjb/dmaap/dmaap-messagerouter-dmaapclient.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-dmaapclient.yaml
@@ -58,6 +58,7 @@
     mvn-settings: 'dmaap-messagerouter-dmaapclient-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    java-version: openjdk11
 
 - project:
     name: dmaap-messagerouter-dmaapclient-clm
@@ -68,6 +69,7 @@
     project-name: 'dmaap-messagerouter-dmaapclient'
     branch: 'master'
     mvn-settings: 'dmaap-messagerouter-dmaapclient-settings'
+    java-version: openjdk11
 
 - project:
     name: dmaap-messagerouter-dmaapclient-info
